show couple in gui

--- a/devel/sort_lobuli.ipynb
+++ b/devel/sort_lobuli.ipynb
@@ -13,6 +13,7 @@
     "pth = op.join(path_to_script, \"../../scaffan/\")\n",
     "sys.path.insert(0, pth)\n",
     "\n",
+    "import pandas as pd\n",
     "import micrant\n",
     "\n",
     "import micrant.micrant_app"
@@ -33,12 +34,10 @@
    ],
    "source": [
     "mapp = micrant.micrant_app.MicrAnt()\n",
-    "\n",
     "xfn = mapp.parameters.param(\"Output\", \"Common Spreadsheet File\").value()\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_excel(xfn)\n",
+    "unique_df = df.drop_duplicates(subset=[\"File Name\",\"Annotation ID\"], keep=\"first\")\n",
+    "unique_df.keys()\n",
     "# mapp.report.additional_spreadsheet_fn"
    ]
   },
@@ -62,10 +61,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "unique_df = df.drop_duplicates(subset=[\"File Name\",\"Annotation ID\"], keep=\"first\")\n",
-    "unique_df.keys()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -748,6 +744,52 @@
     "    plt.subplot(122)\n",
     "    plt.imshow(prev_img)\n",
     "    plt.title(f\"fn={prev_row['File Name']}, {prev_row['Annotation ID']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2019-11-20 18:18:07.800 | DEBUG    | scaffan.image:__init__:195 - fs_enc: utf-8\n",
+      "2019-11-20 18:18:07.806 | DEBUG    | scaffan.image:__init__:196 - Reading file C:\\Users\\Jirik\\data\\medical\\orig\\Scaffan-analysis\\PIG-004_BBJ-004-2 _HE_parenchyme.ndpi\n",
+      "2019-11-20 18:18:07.837 | DEBUG    | scaffan.image:read_annotations:272 - Reading the annotation C:\\Users\\Jirik\\data\\medical\\orig\\Scaffan-analysis\\PIG-004_BBJ-004-2 _HE_parenchyme.ndpi\n",
+      "2019-11-20 18:18:10.707 | DEBUG    | scaffan.annotation:read_annotations:122 - windows annotation output:b'2019-11-20 18:18:10.448 | DEBUG    | scaffan.annotation:ndpa_to_json:71 - PATH: ...\\\\bin;C:\\\\Users\\\\Jirik\\\\Downloads\\\\openslide-win64-20171122\\\\bin;C...\\r\\n'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ann ID=0\n",
+      "za jildem\n",
+      "ann ID=1\n",
+      "za jildem\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-109-9a797248b3af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mgen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenerate_image_couples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0munique_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0munique_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Annotation ID\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "gen = generate_image_couples(unique_df[unique_df[\"Annotation ID\"] < 2])\n",
+    "next(gen)\n",
+    "next(gen)\n",
+    "next(gen)\n",
+    "\n",
+    "next(gen)"
    ]
   }
  ],
