combine more columns

--- a/examples/join_new_parameter_value.ipynb
+++ b/examples/join_new_parameter_value.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -18,7 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "add path C:\\Users\\Jirik\\Downloads\\openslide-win64-20171122\\bin\n"
      ]
     }
    ],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
        "[320 rows x 84 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -589,7 +590,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1025,7 @@
        "[2913 rows x 19 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,9 +1050,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-04-11 22:52:32.899 | DEBUG    | micrant.image_sort_tools:get_new_parameter_table:37 - Creating column HOM from Annotation Details\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1487,7 +1495,7 @@
        "[320 rows x 85 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1756,7 @@
        "[248 rows x 11 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,9 +1777,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-04-11 22:52:33.044 | DEBUG    | micrant.image_sort_tools:get_new_parameter_table:40 - No Annotation Method or Annotation Details column\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2207,7 +2222,7 @@
        "[320 rows x 85 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,8 +2241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2664,7 +2681,7 @@
        "[320 rows x 85 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2681,6 +2698,36 @@
     "    on=[\"Annotation ID\", \"File Name\"],\n",
     ")\n",
     "df_new_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use two columns described with MicrAnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-04-11 22:55:51.091 | DEBUG    | micrant.image_sort_tools:get_new_parameter_table:37 - Creating column SNI from Annotation Details\n",
+      "2020-04-11 22:55:51.119 | DEBUG    | micrant.image_sort_tools:get_new_parameter_table:40 - No Annotation Method or Annotation Details column\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_sni = imst.get_new_parameter_table(df, colname=\"SNI\", rewrite_annotated_parameter_with_recent=True)\n",
+    "df_both = imst.add_parameter_column(df_sni, df_micrant_parameter, \"HOM\")\n",
+    "# df_both\n",
+    "df_both[[\"File Name\", \"Annotation ID\", \"SNI\", \"HOM\"]]\n",
+    "\n",
+    "df_both.to_excel(\"parameter_table_SNI_HOM.recent.xlsx\")"
    ]
   }
  ],
